Calling .define(...) on Macro subclass crashes Blender, if subclass wasn't registered #36924

Closed
opened 2013-10-03 01:05:24 +02:00 by CodeManX · 3 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7

- Blender version with error, and version that worked ---

2.69 testbuild 1, happens also in 2.67

- Short description of error ---

(see title)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Run attached script in blender.
If you uncomment the registration, it will be fine.%%%

%%%--- Operating System, Graphics card --- Windows 7 - Blender version with error, and version that worked --- 2.69 testbuild 1, happens also in 2.67 - Short description of error --- (see title) - Steps for others to reproduce the error (preferably based on attached .blend file) --- Run attached script in blender. If you uncomment the registration, it will be fine.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r60518.%%%

%%%fixed r60518.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#36924
No description provided.