fix [#36924] Calling .define(...) on Macro subclass crashes Blender, if subclass wasn't registered